fixed a flex-wrap regression;

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -6,7 +6,6 @@ body {
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
-
 }
 
 /*utility class*/
@@ -312,7 +311,6 @@ body {
 
   display: flex;
   flex-direction: column;
-  flex-wrap:wrap;
   align-items: center;
   border: 2px var(--black3) solid;
 }
